main: sua loi